--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p>(14-03-2024)</p>
                 
                 <div class="certificate_link">
-                    <a href="https://www.linkedin.com/learning/certificates/ccf71a13b34ed4ea8bfb64858fce8b9bfb39028e0cab51eb3c7f07b4d5a3feb9" target="_blank" onclick="event.stopPropagation();">Certificate</a>
+                    <a href="https://certificates.knowledgehut.com/a860369d-6661-45a6-8da6-249b9980af64-UG%20GGU%20Course%20completion-KH12-1111313-20240418234.jpeg" target="_blank" onclick="event.stopPropagation();">Certificate</a>
                 </div>
             </div>
             <div class="certificate-item">
