--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-title">
             <h1>Vunyala saivikas</h1>
-            <a href="Vunyala Saivkas.pdf" class="resume-button" target="_blank" download>RESUME</a>
+            <a href="Vunyala Saivikas Resume.pdf" class="resume-button" target="_blank" download>RESUME</a>
         </div>
         <div class="header-content">
             <h2>Data Scientist</h2>
