--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <div class="skill-category">
                 <h3>Developing Machine Learning Models</h3>
                 <ul>
-                    <li>AWS (Amazon Web Services)</li>
+                    <li>Supervised Learning</li>
+                    <li>Reinforcement Learning</li>
                 </ul>
             </div>
             <div class="skill-category">
